--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xowzf2282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xowzf2282/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xowzf2282/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xowzf2282/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xowzf2282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xowzf2282/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xowzf2282/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xowzf2282/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xowzf2282/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xowzf2282/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xowzf2282/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xowzf2282/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xowzf2282/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xowzf2282/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xowzf2282/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xowzf2282/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/xowzf2282/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/xowzf2282/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/xowzf2282/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xowzf2282/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xowzf2282/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/xowzf2282/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xowzf2282/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xowzf2282/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xowzf2282/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/xowzf2282/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xowzf2282/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xowzf2282/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/xowzf2282/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xowzf2282/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/xowzf2282/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xowzf2282/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xowzf2282/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xowzf2282/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xowzf2282/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xowzf2282/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xowzf2282/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xowzf2282/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xowzf2282/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xowzf2282/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xowzf2282/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11790810.md#1" target="_blank">哈佛大学研究实证：蔬菜汤不只抗癌 有九大功效</a><br></h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11790810.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/vegetable-soup-benefit_755253565-320x200.jpg" align ="left"></a>专攻免疫力和抗癌领域的哈佛医师高桥弘，根据多年研究，发明出运用常见食材熬煮的“常备抗癌蔬菜汤”。他认为，蔬果富含珍贵的植化素，用高丽菜、胡萝卜、洋葱、南瓜四种蔬菜，不经调味煮出的蔬菜汤，有非常好的抗病功效。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 11:48 PM	</td></tr>
+<tr><td><h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791511.md#1" target="_blank">你需要补牙吗？补牙前你一定要知道这些事</a><br></h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791511.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/teeth-dental-filling0-200113-320x200.jpg" align ="left"></a>很多人一生中都有过补牙的经历，补牙会带来伤害吗？有些人补完牙为什么牙齿更敏感？哪些情况需要补牙？常见的银粉、树脂、陶瓷等补牙材料，有何优缺点？来牙医诊所检查牙齿，有三种情况需要补牙：预防、恢复功能（如蛀牙）、美观。树脂与银粉填补，适合小范围蛀牙或缺损。许多人会遇到补牙完后，牙齿敏感酸痛的问题，可能来自多种原因：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 2:40 PM	</td></tr>
 <tr><td><h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11790090.md#1" target="_blank">超写实羊毛毡小动物 像迪士尼动画的主角可爱极了</a><br></h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11790090.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/11201374133ba517f781b7ce43413d05-150x120.jpg" align ="left"></a>一位俄罗斯艺术家用羊毛毡制作小动物，作品非常可爱小巧而又写实美丽，他专门制作林地动物看起来就像是从 迪斯尼电影中走出来的一样，让人看得不知不觉地嘴角挂起微笑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 11:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11790965.md#1" target="_blank">2019旧金山湾区房价 12月份销售一览（上）</a><br></h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11790965.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/12.49.54-150x120.png" align ="left"></a>以下表格即是2019年12月份，湾区部分城市的房产销售一览。
 注：房型CO是康斗，DE是独立房
@@ -27,6 +27,7 @@
 以上数据由星河地产（Starriver Rea.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 1:19 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11790272.md#1" target="_blank">12月再小跌 2019旺季不旺，淡季不淡</a><br></h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11790272.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/11.11.57-150x120.png" align ="left"></a>文：李欧?大纪元
 随着2020年一月的到来，去年十二月的房市表现也出炉了，在这个佳节淡季中，不意外地房价、交易量再度下跌，从我们针对的部分湾区房市观察中，交易量比十一月小跌4.43%，销售中位价仅小幅下滑1.65%，价格甚至比八、九月时稍高（详见表一）。总体表现也比2018年同期更好，当时只有1128个交易，中位价约.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 12:44 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11790810.md#1" target="_blank">哈佛大学研究实证：蔬菜汤不只抗癌 有九大功效</a><br></h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11790810.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/vegetable-soup-benefit_755253565-150x120.jpg" align ="left"></a>专攻免疫力和抗癌领域的哈佛医师高桥弘，根据多年研究，发明出运用常见食材熬煮的“常备抗癌蔬菜汤”。他认为，蔬果富含珍贵的植化素，用高丽菜、胡萝卜、洋葱、南瓜四种蔬菜，不经调味煮出的蔬菜汤，有非常好的抗病功效。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 11:48 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11790697.md#1" target="_blank">《吕氏春秋》中的“养生三患” 是哪三患？</a><br></h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11790697.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/lvshichunqiu-200113-150x120.jpg" align ="left"></a>《吕氏春秋》由战国时期秦国相国吕不韦及其门人编纂而成，是一本杂家代表作。书中有专论养生的文章，提到了“养生三患”。第一患，患好逸恶劳。
 
 “出则以车，入则以辇，务以自佚，命之曰招蹙之机。”有些人出门就坐车，回家也坐车，以舒服快活为第一要务，这会让人短命的！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 11:04 PM			</td></tr>
@@ -53,7 +54,6 @@
 <tr><td><h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/10/n11781698.md#1" target="_blank">韩国“保母车”：2020 Kia Carnival MPV</a><br></h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/10/n11781698.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20200110-Chi-Jin-Kia-Carnival-01-150x120.jpg" align ="left"></a>KIA是两大韩国汽车品牌之一，中文名叫起亚。最初的Logo设计为绿色图形符号，随后在1994年为了纪念创业50周年而改用白底红字的字母Logo，一直沿用至今。KIA不仅生产轿车、SUV，还涉及MPV领域，Carnival是KIA旗下的一款MPV八坐“保母车”，澳洲俗称people mover。Carnival MPV由.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 2:07 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/10/n11781469.md#1" target="_blank">野火灾情惨重 澳洲青年开车四处救无尾熊</a><br></h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/10/n11781469.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1185446524-150x120.jpg" align ="left"></a>澳洲野火自去年9月延烧至今，已经烧掉相当于韩国那么大的林地，导致5亿只动物死亡，其中包括大量澳洲特有的可爱动物无尾熊。除了澳洲政府致力于灭火之外，当地民众也尽力救灾，其中包括弥迦（Micah）和迦勒（Caleb）这两名年轻男子。他们开车四处搜寻，试图拯救受灾的无尾熊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 1:38 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/9/n11779521.md#1" target="_blank">老爷爷亲手编织“白癜风娃娃”疗愈儿童患者</a><br></h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/9/n11779521.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/7ee7890ec85f10aa1bc5a2357839953e-150x120.jpg" align ="left"></a>住在巴西的一位64岁爷爷，由于自己是一位白癜风患者，退休后开始制作“白癜风娃娃”送给患有同样症状的儿童，收到娃娃的孩子们个个都高兴的爱不释手。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 1:33 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/10/n11781628.md#1" target="_blank">车评：超越53MPG 2020 Toyota Corolla Hybrid LE</a><br></h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/10/n11781628.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2020_Toyota_Corolla_Hybrid_03-150x120.jpg" align ="left"></a>Toyota的长青车系Corolla，已迈进第十二代，去年已率先测试了被Toyota称为“Haute Hatch”的Hatchback揭背版本，动力不错又有动感外形，与Mazda3 Hatchback及Honda Civic Hatchback成为最受欢迎的三款日系Hatchback，其实还有Subaru Imprez.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 1:31 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/10/n11783310.md#1" target="_blank">汽车维修问与答：气温零下时方向盘变紧</a><br></h3>汽车维修问与答
 
 读者Grace问：李师傅您好!
